--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,11 @@ body {
   .app {
     display: flex;
     flex-direction: column;
+    padding: 16px;
+  }
+
+  .app_left, .app_right {
+    padding: 0;
   }
 
   .app_left {
@@ -65,6 +70,15 @@ body {
 }
 
 @media only screen and (max-width: 500px) {
+
+  .app {
+    padding: 8px;
+  }
+
+  .app_left, .app_right {
+    padding: 0;
+  }
+
   .app_header h1 {
     font-size: larger;
   }
